--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Phonetic alphabet speller",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf build node_modules elm-stuff",
+    "build": "webpack --display-modules",
+    "start": "webpack-dev-server --host 0.0.0.0 --port 8000 --inline --hot"
   },
   "repository": {
     "type": "git",
@@ -20,14 +22,20 @@
     "url": "https://github.com/jur0/speller/issues"
   },
   "homepage": "https://github.com/jur0/speller#readme",
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.6.1",
-    "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
+    "elm-hot-loader": "^0.5.4",
     "elm-webpack-loader": "^4.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.26.0",
+    "node-elm-compiler": "^4.2.1",
+    "postcss-loader": "^1.2.1",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^2.3.1"
   }
 }
