--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
-    "webpack-merge": "^2.3.1"
+    "webpack-merge": "^2.3.1",
+    "write-file-webpack-plugin": "^3.4.2"
   }
 }
